--- a/.gitconfig
+++ b/.gitconfig
@@ -6,6 +6,8 @@
 	amend = commit --amend -C HEAD
 	undo = reset --soft HEAD^
 	ls = log --pretty=format:\"%C(yellow)%h %C(blue)%ad%C(red)%d %C(reset)%s%C(green) [%cn]\" --decorate --date=short
+    lsd = cherry -v dev
+    lsm = cherry -v master
 	standup = log --since '1 day ago' --oneline --author rooslunn@gmail.com
 	graph = log --graph --pretty=format':%C(yellow)%h%Cblue%d%Creset %s %C(white) %an, %ar%Creset'
 	br = branch
